Rendering photographer detail page + banner

--- a/pages/photographer/photographer.html
+++ b/pages/photographer/photographer.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <a href="/" aria-label="Fisheye Home page">
+      <a href="/index.html" aria-label="Fisheye Home page">
         <img src="../../assets/images/logo.png" class="logo" alt="Fisheye Home page" />
       </a>
     </header>
@@ -25,6 +25,8 @@
       <section class="photo-overview">
       </section>
     </main>
+    <footer class="likes_price_banner">
+    </footer>
     <div id="contact_modal">
 			<div class="modal">
 				<header>
@@ -40,5 +42,6 @@
 				</form>
 			</div>
 		</div>
+
   </body>
 </html>
