--- a/pages/photographer/photographer.html
+++ b/pages/photographer/photographer.html
@@ -20,12 +20,13 @@
     </header>
     <main id="main">
       <section class="photographer-header">
-        <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
       </section>
       <section class="photo-overview">
       </section>
     </main>
     <footer class="likes_price_banner">
+      <p class="photo_card_likes"></p>
+      <p></p>
     </footer>
     <div id="contact_modal">
 			<div class="modal">
@@ -36,7 +37,13 @@
 				<form>
 					<div>
 						<label>Prénom</label>
-						<input />
+						<input>
+            <label>Nom</label>
+						<input>
+            <label>Email</label>
+						<input>
+            <label>Votre message</label>
+						<textarea></textarea>
 					</div>
           <button class="contact_button">Envoyer</button>
 				</form>
