--- a/pages/photographer/photographer.html
+++ b/pages/photographer/photographer.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <title>Fisheye - photographe </title>
     <script src="https://kit.fontawesome.com/109ab672b8.js" crossorigin="anonymous"></script>
-    <script src="../../components/contactForm/contactForm.js" type="module"></script>
+    <script src="../../components/modals/modals.js" type="module"></script>
+    <script src="../../components/modals/contactForm.js" type="module"></script>
     <script src="photographer.js" type="module"></script>
   </head>
   <body>
@@ -58,8 +59,8 @@
 			</div>
 		</div>
     <div id="lightbox_modal">
-			<div class="modal">
-			</div>
+			<ul class="light_modal carousel" aria-label="Photo Gallery">
+      </ul>
 		</div>
 
   </body>
