--- a/pages/photographer/photographer.html
+++ b/pages/photographer/photographer.html
@@ -11,6 +11,7 @@
     <script src="https://kit.fontawesome.com/109ab672b8.js" crossorigin="anonymous"></script>
     <script src="../../components/modals/modals.js" type="module"></script>
     <script src="../../components/modals/contactForm.js" type="module"></script>
+    <script src="../../components/modals/lightbox.js" type="module"></script>
     <script src="photographer.js" type="module"></script>
   </head>
   <body>
@@ -59,9 +60,8 @@
 			</div>
 		</div>
     <div id="lightbox_modal">
-			<ul class="light_modal carousel" aria-label="Photo Gallery">
-      </ul>
+      <div class="carousel" aria-label="Media Gallery">
+      </div>
 		</div>
-
   </body>
 </html>
