--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </head>
   <body>
     <header>
-      <a href="/" aria-label="Fisheye Home page">
-        <img src="../../assets/images/logo.png" class="logo" alt="Fisheye Home page" />
+      <a href="/" aria-label="Fisheye page d'accueil">
+        <img src="../../assets/images/logo.png" class="logo" alt="" />
       </a>
       <h1>Nos photographes</h1>
     </header>
