--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </a>
       <h1>Nos photographes</h1>
     </header>
-    <main id="main" role="main">
+    <main id="main">
       <section class="photographer_section"></section>
     </main>
   </body>
