--- a/pages/photographer/photographer.html
+++ b/pages/photographer/photographer.html
@@ -21,7 +21,7 @@
         <img src="../../assets/images/logo.png" class="logo" alt="" />
       </a>
     </header>
-    <main id="main" role="main">
+    <main id="main">
       <section class="photographer-header">
       </section>
       <section class="sort_list">
@@ -44,19 +44,19 @@
             <div class="formWrapper">
               <div class="formField" role="group" aria-labelledby="first-name">
                 <label for="first-name">Prénom</label>
-                <input id="first-name" name="first-name" type="text" aria-required=true required>  
+                <input id="first-name" name="first-name" type="text" aria-required="true" required>  
               </div>
               <div class="formField" role="group" aria-labelledby="last-name">
                 <label for="last-name">Nom</label>
-                <input id="last-name" name="last-name" type="text" aria-required=true required>
+                <input id="last-name" name="last-name" type="text" aria-required="true" required>
               </div>
               <div class="formField" role="group" aria-labelledby="email">
                 <label for="email">Email</label>
-                <input id="email" name="email" type="email" pattern=".+@.+\..+" aria-required=true required>
+                <input id="email" name="email" type="email" pattern=".+@.+\..+" aria-required="true" required>
               </div>
               <div class="formField" role="group">
                 <label for="message">Votre message</label>
-                <textarea id="message" name="message" type="text" aria-required=true required></textarea>
+                <textarea id="message" name="message" aria-required="true" required></textarea>
               </div>
             </div>
             <button class="contact_button" onclick="return validateForm()">Envoyer</button>
