--- a/pages/photographer/photographer.html
+++ b/pages/photographer/photographer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="FR">
+<html lang="fr">
   <head>
     <link href="../../render/style.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
