--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <a href="/" aria-label="Fisheye page d'accueil">
-        <img src="../../assets/images/logo.png" class="logo" alt="" />
+        <img src="../../assets/images/logo.png" class="logo" alt="Fisheye page d'accueil" />
       </a>
       <h1>Nos photographes</h1>
     </header>
