--- a/pages/photographer/photographer.html
+++ b/pages/photographer/photographer.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <a href="/index.html" aria-label="Fisheye page d'accueil">
-        <img src="../../assets/images/logo.png" class="logo" alt="" />
+        <img src="../../assets/images/logo.png" class="logo" alt="Fisheye page d'accueil" />
       </a>
     </header>
     <main id="main">
@@ -37,24 +37,24 @@
       <div aria-hidden="true" aria-modal="false" id="contact_modal" role="dialog" aria-label="formulaire de contact">
         <div class="modal">
           <header>
-            <h2 class="contactFormHeader">Contactez-moi</h2>
-            <img src="../../assets/icons/close.svg" onclick="closeModal('contact_modal')" alt="Ferme formulaire de contact"/>
+            <h2 class="contactFormHeader" role="">Contactez-moi</h2>
+            <img src="../../assets/icons/close.svg" onclick="closeModal('contact_modal')" tabindex="0" role="link" alt="Ferme formulaire de contact"/>
           </header>
           <form>
             <div class="formWrapper">
-              <div class="formField" role="group" aria-labelledby="first-name">
+              <div class="formField">
                 <label for="first-name">Prénom</label>
                 <input id="first-name" name="first-name" type="text" aria-required="true" required>  
               </div>
-              <div class="formField" role="group" aria-labelledby="last-name">
+              <div class="formField">
                 <label for="last-name">Nom</label>
                 <input id="last-name" name="last-name" type="text" aria-required="true" required>
               </div>
-              <div class="formField" role="group" aria-labelledby="email">
+              <div class="formField">
                 <label for="email">Email</label>
                 <input id="email" name="email" type="email" pattern=".+@.+\..+" aria-required="true" required>
               </div>
-              <div class="formField" role="group">
+              <div class="formField">
                 <label for="message">Votre message</label>
                 <textarea id="message" name="message" aria-required="true" required></textarea>
               </div>
@@ -64,7 +64,7 @@
         </div>
       </div>
       <div aria-hidden="true" id="lightbox_modal" role="dialog" aria-label="gallerie photo et video" aria-modal="false">
-        <div class="carousel" role="region" aria-roledescription="vue zoomé" >
+        <div class="carousel">
         </div>
       </div>
     </main>
