Adjusments selectmenu & lightbox design

--- a/pages/photographer/photographer.html
+++ b/pages/photographer/photographer.html
@@ -26,7 +26,7 @@
       </section>
       <section class="sort_list">
         <label id="label" for="sort">Trier par</label>
-        <select name="sort" id="sort" aria-labelledby="label">
+        <select name="sort" id="sort" aria-labelledby="label" onclick="showDropdown(this)">
           <option value="Popularité">Popularité</option>
           <option value="Date">Date</option>
           <option value="Titre">Titre</option>
