--- a/index.html
+++ b/index.html
@@ -2,18 +2,26 @@
 <html lang="fr">
   <head>
     <link href="render/style.css" rel="stylesheet" type="text/css" />
-    <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/png" href="assets/favicon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
     <title>Fisheye</title>
     <script src="pages/accueil/accueil.js" type="module"></script>
   </head>
   <body>
     <header>
       <a href="/" aria-label="Fisheye page d'accueil">
-        <img src="../../assets/images/logo.png" class="logo" alt="Fisheye page d'accueil" />
+        <img
+          src="../../assets/images/logo.png"
+          class="logo"
+          alt="Fisheye page d'accueil"
+        />
       </a>
       <h1>Nos photographes</h1>
     </header>
