--- a/pages/photographer/photographer.html
+++ b/pages/photographer/photographer.html
@@ -2,13 +2,20 @@
 <html lang="fr">
   <head>
     <link href="../../render/style.css" rel="stylesheet" type="text/css" />
-    <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
-    <title>Fisheye - photographe </title>
-    <script src="https://kit.fontawesome.com/109ab672b8.js" crossorigin="anonymous"></script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/png" href="assets/favicon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Fisheye - photographe</title>
+    <script
+      src="https://kit.fontawesome.com/109ab672b8.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="../../components/modals/modals.js" type="module"></script>
     <script src="../../components/modals/contactForm.js" type="module"></script>
     <script src="../../components/modals/lightbox.js" type="module"></script>
@@ -18,54 +25,104 @@
   <body>
     <header>
       <a href="/index.html" aria-label="Fisheye page d'accueil">
-        <img src="../../assets/images/logo.png" class="logo" alt="Fisheye page d'accueil" />
+        <img
+          src="../../assets/images/logo.png"
+          class="logo"
+          alt="Fisheye page d'accueil"
+        />
       </a>
     </header>
     <main id="main">
-      <section class="photographer-header">
-      </section>
+      <section class="photographer-header"></section>
       <section class="sort_list">
         <label id="label" for="sort">Trier par</label>
-        <select name="sort" id="sort" aria-labelledby="label" onclick="showDropdown(this)">
+        <select
+          name="sort"
+          id="sort"
+          aria-labelledby="label"
+          onclick="showDropdown(this)"
+        >
           <option value="Popularité">Popularité</option>
           <option value="Date">Date</option>
           <option value="Titre">Titre</option>
         </select>
       </section>
-      <section class="photo-overview">
-      </section>
-      <div aria-hidden="true" aria-modal="false" id="contact_modal" role="dialog" aria-label="formulaire de contact">
+      <section class="photo-overview"></section>
+      <div
+        aria-hidden="true"
+        aria-modal="false"
+        id="contact_modal"
+        role="dialog"
+        aria-label="formulaire de contact"
+      >
         <div class="modal">
           <header>
             <h2 class="contactFormHeader" role="">Contactez-moi</h2>
-            <img src="../../assets/icons/close.svg" onclick="closeModal('contact_modal')" tabindex="0" role="link" alt="Ferme formulaire de contact"/>
+            <img
+              src="../../assets/icons/close.svg"
+              onclick="closeModal('contact_modal')"
+              tabindex="0"
+              role="link"
+              alt="Ferme formulaire de contact"
+            />
           </header>
           <form>
             <div class="formWrapper">
               <div class="formField">
                 <label for="first-name">Prénom</label>
-                <input id="first-name" name="first-name" type="text" aria-required="true" required>  
+                <input
+                  id="first-name"
+                  name="first-name"
+                  type="text"
+                  aria-required="true"
+                  required
+                />
               </div>
               <div class="formField">
                 <label for="last-name">Nom</label>
-                <input id="last-name" name="last-name" type="text" aria-required="true" required>
+                <input
+                  id="last-name"
+                  name="last-name"
+                  type="text"
+                  aria-required="true"
+                  required
+                />
               </div>
               <div class="formField">
                 <label for="email">Email</label>
-                <input id="email" name="email" type="email" pattern=".+@.+\..+" aria-required="true" required>
+                <input
+                  id="email"
+                  name="email"
+                  type="email"
+                  pattern=".+@.+\..+"
+                  aria-required="true"
+                  required
+                />
               </div>
               <div class="formField">
                 <label for="message">Votre message</label>
-                <textarea id="message" name="message" aria-required="true" required></textarea>
+                <textarea
+                  id="message"
+                  name="message"
+                  aria-required="true"
+                  required
+                ></textarea>
               </div>
             </div>
-            <button class="contact_button" onclick="return validateForm()">Envoyer</button>
+            <button class="contact_button" onclick="return validateForm()">
+              Envoyer
+            </button>
           </form>
         </div>
       </div>
-      <div aria-hidden="true" id="lightbox_modal" role="dialog" aria-label="gallerie photo et video" aria-modal="false">
-        <div class="carousel">
-        </div>
+      <div
+        aria-hidden="true"
+        id="lightbox_modal"
+        role="dialog"
+        aria-label="gallerie photo et video"
+        aria-modal="false"
+      >
+        <div class="carousel"></div>
       </div>
     </main>
     <footer class="likes_price_banner">
